# facmaker

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/: imgui.ini  starting_program.json
assets/examples/: ic2_ore_processing.fac
ext/: CMakeLists.txt
include/facmaker/: factory.hpp  item.hpp  uid.hpp
include/facmaker/editor/: factory_editor.hpp
include/facmaker/util/: more_imgui.hpp  quantity_plot.hpp
include/pfd/: pfd.hpp
src/: factory.cpp  main.cpp  pfd.cpp  uid.cpp
src/editor/: draw_helpers.hpp  factory_editor.cpp  parsing.cpp
src/util/: more_imgui.cpp  quantity_plot.cpp
